ePortfolio 2.3/src/objects/Asset__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommendations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Examples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Writing Samples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Images</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>url</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>video</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Link__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>